@@ -194,15 +194,29 @@ public class Table
     }
 
     /**
-     * Take a snapshot of the entire set of column families with a given timestamp
+     * Take a snapshot of the specific column family, or the entire set of column families
+     * if columnFamily is null with a given timestamp
      *
      * @param snapshotName the tag associated with the name of the snapshot.  This value may not be null
+     * @param columnFamilyName the column family to snapshot or all on null
+     *
+     * @throws IOException if the column family doesn't exist
      */
-    public void snapshot(String snapshotName)
+    public void snapshot(String snapshotName, String columnFamilyName) throws IOException
     {
         assert snapshotName != null;
+        boolean tookSnapShot = false;
         for (ColumnFamilyStore cfStore : columnFamilyStores.values())
-            cfStore.snapshot(snapshotName);
+        {
+            if (columnFamilyName == null || cfStore.columnFamily.equals(columnFamilyName))
+            {
+                tookSnapShot = true;
+                cfStore.snapshot(snapshotName);
+            }
+        }
+
+        if ((columnFamilyName != null) && !tookSnapShot)
+            throw new IOException("Failed taking snapshot. Column family " + columnFamilyName + " does not exist.");
     }
 
     /**
