@@ -1,4 +1,6 @@
 1.1.1-dev
+ * add -cf option to nodetool snapshot, and takeColumnFamilySnapshot to
+   StorageService mbean (CASSANDRA-556)
  * optimize cleanup to drop entire sstables where possible (CASSANDRA-4079)
  * optimize truncate when autosnapshot is disabled (CASSANDRA-4153)
  * add support for commitlog archiving and point-in-time recovery
